[project]
name = "wayline-api"
version = "0.1.0"
description = "Wayline API — FastAPI HTTP layer + Polars analysis engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "polars>=1.0",
    "anthropic>=0.40",
]

[tool.uv]
package = false
